app-33.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-24
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: ns-24
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-app
        image: tikhonow/distrub:latest
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: ns-24
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: ns-24
spec:
  selector:
    app: django-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: ns-24
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: ns-24
  annotations:
    haproxy.org/ssl-redirect: "true"
    haproxy.org/ingress.class: "haproxy" 
spec:
  ingressClassName: haproxy
  rules:
  - host: django-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 8000
